# CLI-CodeHelper

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: client.rs  config.rs  mod.rs  models.rs
src/cli/: interactive.rs  mod.rs  shell.rs
src/utils/: display.rs
