[package]
name = "cli-helper"
version = "0.2.0"
edition = "2021"
authors = ["Sage Chen <sagecheni@outlook.com>"]
description = "A CLI tool for interacting with OpenAI API"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
dotenv = "0.15.0"
bytes = "1.0"
serde_json = "1.0"
colored = "2.0"
spinners = "4.1"
chrono= "0.4"
rand = "0.8"
eventsource-stream = "0.2"
directories = "5.0"
dirs = "5.0"